fix: page description overflow

--- a/_sass/pagination.scss
+++ b/_sass/pagination.scss
@@ -188,7 +188,7 @@
         .box_contents {
             width: 100%;
             margin: auto 0 auto -5rem;
-            padding: 0.5rem 0 0.5rem 1.5rem;
+            padding: 0.5rem 1.5rem;
             background-color: rgba(255,255,255,0.95);
             background-image: url(/assets/img/tile.png);
             border-radius: 6px;
